@@ -201,6 +201,7 @@ zztong_tfp_cemetery_01,POI,POI,,x,Old Cemetary,,,,,,,,,,,,,,
 zztong_tfp_docks_01,POI,POI,,x,BJ's Gas,,,,,,,,,,,,,,
 zztong_tfp_docks_05,POI,POI,,x,Live Bait,,,,,,,,,,,,,,
 zztong_tfp_house_new_04,POI,POI,,x,34 Claremont Avenue,,,,,,,,,,,,,,
+zztong_tfp_house_old_spanish_01,POI,POI,,x,66 Barnes Lane,,,,,,,,,,,,,,
 zztong_tfp_prison_01,POI,POI,,x,Old Navezgane Prison Museum,,,,,,,,,,,,,,
 zztong_tfp_ranger_station_01,POI,POI,,x,Delta Creek Ranger Station,,,,,,,,,,,,,,
 zztong_tfp_school_k6_01,POI,POI,,x,Navezgane Academy,,,,,,,,,,,,,,
